// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> should render Counter with default props 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 lldTHu dTYmGd"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO hlMkHt"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast blue variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 fNXoki dttayR"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cEvTNh"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast information variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 cgqMEQ gwViQX"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cEvTNh"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast negative variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 dkjEtv liqHWA"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cEvTNh"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast neutral variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 jjdQUy kCRITN"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cEvTNh"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast notice variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 cQZTS elVTwt"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cEvTNh"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render high contrast positive variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 bRAiRW CffaN"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cEvTNh"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render large size Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 lldTHu dTYmGd"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO hUyOYU"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast blue variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 bwrZaM goERCT"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO bFfhku"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast information variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 kYPtza gilcwN"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO ifitbA"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast negative variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 kScMfw kSQvbD"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO cAjFun"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast neutral variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 lldTHu dTYmGd"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO hlMkHt"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast notice variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 jfbcDy jZEMqN"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO bSgISm"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render low contrast positive variant Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 bEaUIc hNXeTn"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO kHUjbS"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render medium size Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 lldTHu dTYmGd"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx KJLNh"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO hlMkHt"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Counter /> should render small size Counter 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="counter"
  >
    <div
      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 lldTHu dTYmGd"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx NPGgl"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO hRojGK"
          data-blade-component="text"
        >
          20
        </p>
      </div>
    </div>
  </div>
</div>
`;
